--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-# name: gentxt 
+name: null
 channels:
   - pytorch
   - defaults
@@ -54,6 +54,7 @@ dependencies:
   - requests=2.23.0
   - requests-oauthlib=1.3.0
   - rsa=4.0
+  - scipy=1.4.1
   - setuptools=46.1.3
   - six=1.14.0
   - sqlite=3.31.1
